# ccextractorGUI-nuklear

./: .gitignore  GSoC2017_FinalReport.md  README.md  activity.c  ccextractor  ccextractorGUI.c  ccextractorGUI.h  ccx_cli_thread.c  ccx_cli_thread.h  command_builder.c  command_builder.h  file_browser.c  file_browser.h  guidoc.md  popups.c  popups.h  preview.c  tabs.c  tabs.h  terminal.c
Windows/ccextractorGUI/: ccextractorGUI.VC.db  ccextractorGUI.sln
Windows/ccextractorGUI/Debug/: ccextractor.ini  ccextractorgui.ilk
Windows/ccextractorGUI/ccextractorGUI/: ccextractorGUI.c  ccextractorGUI.h  ccextractorGUI.vcxproj  ccextractorGUI.vcxproj.filters  ccx_cli_thread.c  command_builder.c  popups.c  popups.h  tabs.c
Windows/ccextractorGUI/ccextractorGUI/Debug/: vc140.idb
Windows/ccextractorGUI/ccextractorGUI/Debug/ccextractorGUI.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ccextractorGUI.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Windows/ccextractorGUI/libs/include/nuklear_lib/: overview.c
linux/: Makefile.am  cleanup  configure  configure.ac
linux/autom4te.cache/: output.0  requests  traces.0  traces.1
mac/: Makefile.am
nuklear_lib/: nuklear.h  nuklear_glfw_gl2.h
src/: activity.c  ccextractorGUI.c  ccextractorGUI.h  ccx_cli_thread.c  ccx_cli_thread.h  command_builder.c  command_builder.h  file_browser.c  file_browser.h  popups.c  popups.h  preview.c  preview.h  save_load_data.c  tabs.c  tabs.h  terminal.c
src/GUI/: ccextractorGUI.c  ccextractorGUI.h  command_builder.c  file_browser.c  file_browser.h  popups.c  save_load_data.h
src/lib_ccx/: compile_info_real.h
src/nuklear_lib/: nuklear_glfw_gl2.h
windows/: ccextractor.sln  ccextractorGUI.vcxproj  ccextractorGUI.vcxproj.filters  post-build.bat
